--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/5a15e4e666.js"></script>
+
     <title>Кураж тур</title>
   </head>
   <body>
